
	* socket_f.h, oprs-pprint.c: removed IGNORE code.

2013-01-18  Felix Ingrand  <felix@precise>

	* database.c (key_term_cmp): Symbol are uniquely present in a
	kernel, comparison can be a pointer one.

2013-01-09  Felix Ingrand  <felix@precise>

	* macro.h (FREE_SLIST): This macro had a weird test... simplified it.

2012-10-11  Felix Ingrand  <felix@lucid>

	* Makefile.am (%.h): "if WANT_GTK"'ed the .png->.h icon generation
	for the GTK version .

2012-09-11  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-dump_f.h: uchar-> u_char

 	* Makefile.am: XT_FLAGS->XT_CFLAGS and add MOTIF_CFLAGS.

2012-08-09  Felix Ingrand  <felix@cturtle>

	* Makefile.am (noinst_LTLIBRARIES): do not build gtk binaries by
	default (configure with --enable-gtk if you want to override
	this).

2012-08-02  Felix Ingrand  <felix@cturtle>

	* lex-exp.l.part: Removed the various "test, achieve,
	maintain, etc" temporal operators... hardly used and
	confusing. Moreover, it creates "problem" with namespace when
	loading external OPs. (e.g. for the test module ;-) )

2012-08-01  Felix Ingrand  <felix@cturtle>

	* oprs-type.c (build_dummy_expr_terms): Added this function for
	openprs genom3 encoding... not sure it is a great idea.

	* oprs-type_f-pub.h: Exporting build_term_l_list_from_c_list.

2012-03-14  Felix Ingrand  <felix@cturtle>

	* openprs.pc.in (oprsdatadir): Add the path to the data in the .pc
	file so transgen can grab it to set its openprs_data_path.

2012-03-09  Francois Felix Ingrand  <felix@ingrand.net>

	* ltdl-loader.c (load_function_from_dl): remove the lt_dlsetseachpath for now. Users will have to set it externally which propably
		  make more sense.

2012-03-08  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-parser.y.part: Load external now takes a module name and a symbol to execute.

2012-02-28  Francois Felix Ingrand  <felix@ingrand.net>

	* gope-graphic.c: Darwin seems to be more touchy about symbol multiply defined... moved the definition in a .c and leave the