@@ -25,6 +25,10 @@
 
 	* macro.h (FREE_SLIST): This macro had a weird test... simplified it.
 
+2012-10-12  Felix Ingrand  <felix@lucid>
+
+	* Makefile.am: replace @XXXX@ with ${XXXX}.
+
 2012-10-11  Felix Ingrand  <felix@lucid>
 
 	* Makefile.am (%.h): "if WANT_GTK"'ed the .png->.h icon generation
